attached_assets/Pasted-Compiled-with-problems-ERROR-in-src-components-admin-Ad_1774198434785.txt
Compiled with problems:
×
ERROR in ./src/components/admin/AdminContentEditor.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/workspace/frontend/src/components/admin/AdminContentEditor.js: Adjacent JSX elements must be wrapped in an enclosing tag. Did you want a JSX fragment <>...</>? (691:8)

  689 |           </div>
  690 |         </div>
> 691 |         </>
      |         ^
  692 |       )}
  693 |
  694 |       {/* Syllabus Manager Tab */}
    at constructor (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:365:19)
    at FlowParserMixin.raise (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:6599:19)
    at FlowParserMixin.jsxParseElementAt (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:4742:18)
    at FlowParserMixin.jsxParseElement (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:4749:17)
    at FlowParserMixin.parseExprAtom (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:4759:19)
    at FlowParserMixin.parseExprSubscripts (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11081:23)
    at FlowParserMixin.parseUpdate (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10899:61)
    at FlowParserMixin.parseExprOps (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10831:21)
    at /home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3498:39
    at FlowParserMixin.tryParse (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:6907:20)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3498:18)
    at /home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10800:39
    at FlowParserMixin.allowInAnd (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:12426:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10800:17)
    at FlowParserMixin.parseMaybeAssignAllowInOrVoidPattern (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:12493:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11675:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3591:18)
    at FlowParserMixin.parseExprAtom (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11331:23)
    at FlowParserMixin.parseExprAtom (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:4764:20)
    at FlowParserMixin.parseExprSubscripts (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11081:23)
    at FlowParserMixin.parseUpdate (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10899:61)
    at FlowParserMixin.parseExprOps (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10831:21)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3549:18)
    at /home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3018:77
    at FlowParserMixin.forwardNoArrowParamsConversionAt (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3068:16)
    at FlowParserMixin.parseConditional (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3018:27)
    at FlowParserMixin.parseMaybeConditional (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10885:17)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10831:21)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3549:18)
    at /home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3018:77
    at FlowParserMixin.forwardNoArrowParamsConversionAt (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3068:16)
    at FlowParserMixin.parseConditional (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3018:27)
    at FlowParserMixin.parseMaybeConditional (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10885:17)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10831:21)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:3549:18)
    at FlowParserMixin.parseExpressionBase (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10784:23)
    at /home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10780:39
    at FlowParserMixin.allowInAnd (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:12426:12)
    at FlowParserMixin.parseExpression (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10780:17)
    at FlowParserMixin.jsxParseExpressionContainer (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:4632:31)
    at FlowParserMixin.jsxParseElementAt (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:4711:36)
    at FlowParserMixin.jsxParseElement (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:4749:17)
ERROR
[eslint] 
src/components/admin/AdminContentEditor.js
  Line 691:8:  Parsing error: Adjacent JSX elements must be wrapped in an enclosing tag. Did you want a JSX fragment <>...</>? (691:8)
